interpreter/tests/golden-files/vars.golden.enzo
//= INVOKING AN UNDEFINED VARIABLE
error: undefined variable
	$undefinedVar;// error: undefined variable
//= EMPTY BIND ────────────────────────────────────────────────────────────
//= REDECLARING A VARIABLE (USING “:”) ERRORS ────────────────────────────
error: $x already defined
	$x: 10;             // error $x has already been declared
//= REBINDING WITH “<:” AND INVOKING ───────────────────────────────────────
100
error: cannot bind Text to Number
	$x <: "hello";      // error: cannot bind Text to Number
//= FULL BIND UPFRONT LOCKING TYPE ──────────────────────────────────────────
7
8
error: cannot bind Text to Number
	$z <: "oops";       // error: cannot bind Text to Number
error: $z already defined
	$z : "oops";       // error: $z already defined
//= MIXED‐CASE VARIABLE NAMES ───────────────────────────────────────────
10
20
30
30
//= REBINDING WITH “:>” IMPLICITLY BINDS IF NEEDED ────────────────────────
55
error: cannot bind Text to Number
	$newImplicit <: "oops";     // error: cannot bind Text to Number
"cool dude"
//= MULTIPLE ASSIGNMENTS ON ONE LINE ────────────────────────────────────
3
3
2
//= Var naming
5
9
3
